<resources>
    <string name="app_name">Guarda Amigos</string>
    <string name="fundo_topo">Fundo do topo</string>
    <string name="topo_lista">Amigos</string>
    <string name="foto_amigo">foto do amigo</string>
    <string name="nome">nome</string>
    <string name="telefone"> tel (41) 99999-9999</string>
    <string name="topo_cadastra">Cadastro</string>
    <string name="email">e-mail</string>
    <string name="endereco">endereço</string>
    <string name="aniversario">aniversário</string>
    <string name="salvar">salvar</string>
    <string name="excluir">excluir</string>
    <string name="ligar">ligar</string>
    <string name="maps">maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
